--- a/tossing/Embedded_physics_tossing.ipynb
+++ b/tossing/Embedded_physics_tossing.ipynb
@@ -38,7 +38,7 @@
     "class EmbeddedNet(nn.Module):\n",
     "\n",
     "    def __init__(self, in_traj_num, pre_traj_num):\n",
-    "        super(EstimateParameterNet, self).__init__()\n",
+    "        super(EmbeddedNet, self).__init__()\n",
     "        self.hidden_dim = 128\n",
     "        self.fc_1 = nn.Sequential(\n",
     "            nn.Linear(in_traj_num * 2, self.hidden_dim),\n",
